<resources>
    <string name="app_name">MCC Login</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="loginHint">Enter a user name</string>
    <string name="LoginButtonTxt">Login</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="phoneHint">Phone</string>
    <string name="dateOfBirthHint">Date of Birth</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="dayHint">Day</string>
    <string name="yearHint">Year</string>
    <string name="cert">Certificate</string>
    <string name="twoYr">Associates</string>
    <string name="major">Major</string>
    <string name="btnNext">Next</string>
    <string-array name="listCert">
        <item>Android Certificate</item>
        <item>IOS MobleCertificate</item>
        <item>Programming Certificate</item>
    </string-array>
    <string-array name="listDegree">
        <item>Digital Media</item>
        <item>Mobile Development</item>
        <item>Web Development</item>
    </string-array>
    M/W
    <string name="title_activity_third_page">ThirdPage</string>
    <string name="sectionClass">Select your class and time slot:</string>
    <string name="class1">MAD-107: IOS I</string>
    <string name="class2">MAD-155: Android II</string>
    <string name="class3">MAD-157: iOS II</string>
    <string name="class4">MAD-257: Capstone Mobile Class</string>

    <string name="timeRb1">T/TH 12:00 PM - 1:50 PM</string>
    <string name="timeRb2">M/W 10:00 AM - 11:50 AM</string>
    <string name="timeRb3">T/TH 12:00 PM - 1:50PM</string>
    <string name="timeRb4">T/TH 4:00 PM - 5:50 PM</string>
    <string name="timeRb5">F 9:00 AM - 12:50 PM</string>
    <string name="timeRb6">M/W 12:00 PM - 1:50 PM</string>

    <string name="sumName">Student:</string>
    <string name="sumPhone">Phone:</string>
    <string name="sumBirth">Birthdate:</string>
    <string name="sumDegree">Degree Plan:</string>
    <string name="sumMajor">Major:</string>
    <string name="sumNext">Next Semester</string>


</resources>
